[package]
name = "russimp-sys"
version = "2.0.2-custom"
authors = ["Jhonny Knaak de Vargas"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp-sys"
rust-version = "1.60.0"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp-sys"
description = "Raw Assimp bindings for Rust"
include = [
    "/assimp/",
    "/src/",
    "/bin/",
    "/build.rs",
    "/wrapper.h",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "!*.bash",
    "!*.ps1",
]

[lib]
name = "russimp_sys"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "package"
path = "bin/package/main.rs"
required-features = ["build-assimp", "prebuilt"]

[features]
default = []
build-assimp = ["dep:cmake", "dep:which", "dep:bindgen"]
prebuilt = ["dep:tar", "dep:ureq", "dep:flate2"]
nozlib = []
static-link = []

[dependencies]
flate2 = { version = "1.0.28", optional = true }
tar = { version = "0.4.38", optional = true }

[build-dependencies]
bindgen = { version = "0.69.4", optional = true, default-features = false }
cmake = { version = "0.1.50", optional = true }
flate2 = { version = "1.0.28", optional = true }
ureq = { version = "2.9.6", optional = true }
tar = { version = "0.4.40", optional = true }
which = { version = "6.0.1", optional = true }
